@@ -3,6 +3,11 @@
 
   06 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:
 
+    Revert 'mtime' changes to depscan.sh, and just make it warn if it detects
+    that there are files with mtime in the future.
+
+  06 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:
+
     Enhance gendepends.awk to check more than one level of dependencies.  Also
     break checking of NEED/USE/BEFORE/AFTER into more stages, so that we can
     but sure that all NEED's will override the rest, that USE will override
